[gd_scene load_steps=29 format=3 uid="uid://b1i02u4dife7n"]

[ext_resource type="PackedScene" uid="uid://hy6uwq0pqhbm" path="res://assets/enemies/tracer_enemy.glb" id="1_xmt04"]
[ext_resource type="Script" uid="uid://cw0ejmoh10psi" path="res://assets/enemies/tracer_enemy.gd" id="2_cml04"]
[ext_resource type="ArrayMesh" uid="uid://dssc4xygd45qu" path="res://assets/enemies/exclamation_mark.obj" id="2_oj6cs"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_plklt"]
radius = 0.395866
height = 2.45849

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oj6cs"]
resource_name = "Material.043"
cull_mode = 2
albedo_color = Color(0, 0, 0, 1)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cml04"]
resource_name = "Material.043"
cull_mode = 2
albedo_color = Color(0, 0, 0, 1)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_plklt"]
resource_name = "Material.043"
cull_mode = 2
albedo_color = Color(0, 0, 0, 1)
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6m0sd"]
resource_name = "Material.046"
cull_mode = 2
albedo_color = Color(0.721569, 0.45098, 0.2, 1)
metallic = 1.0
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_atakk"]
resource_name = "Material.048"
cull_mode = 2
albedo_color = Color(0.721507, 0.152755, 0.0121831, 1)
metallic = 0.937008
roughness = 0.661417

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_avh27"]
resource_name = "Material.009"
cull_mode = 2
albedo_color = Color(0.831372, 0.686274, 0.215687, 1)
metallic = 0.992126
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1cpwy"]
resource_name = "Material.009"
cull_mode = 2
albedo_color = Color(0.831372, 0.686274, 0.215687, 1)
metallic = 0.992126
roughness = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sktum"]
resource_name = "Material.009"
cull_mode = 2
albedo_color = Color(0.831372, 0.686274, 0.215687, 1)
metallic = 0.992126
roughness = 0.5

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_oj6cs"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cml04"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_plklt"]
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_oj6cs")
nodes/TimeScale/position = Vector2(220, 60)
nodes/output/position = Vector2(400, 100)
nodes/walk/node = SubResource("AnimationNodeAnimation_cml04")
nodes/walk/position = Vector2(40, 60)
node_connections = [&"TimeScale", 0, &"walk", &"output", 0, &"TimeScale"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oj6cs"]
advance_mode = 2
advance_condition = &"has_appeared"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_plklt"]
states/Start/position = Vector2(245, 103)
states/walk/node = SubResource("AnimationNodeBlendTree_plklt")
states/walk/position = Vector2(434, 109.656)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_oj6cs")]
graph_offset = Vector2(-27, 21.6558)

[sub_resource type="Animation" id="Animation_t82i6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jwdev"]
resource_name = "exclamation_mark"
length = 1.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 1, 1.13333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.3, 0.3, 0.3), Vector3(0.2, 0.2, 0.2), Vector3(0.2, 0.2, 0.2), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 5, 0), Vector3(0, 5.5, 0), Vector3(0, 5, 0), Vector3(0, 5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oj6cs"]
_data = {
&"RESET": SubResource("Animation_t82i6"),
&"exclamation_mark": SubResource("Animation_jwdev")
}

[sub_resource type="Curve" id="Curve_6m0sd"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.556989, 1), 0.0, 0.0, 0, 0, Vector2(0.860215, 0.604943), -3.37466, -3.37466, 0, 0, Vector2(0.991398, 0.0360616), -6.32748, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_74toi"]
curve = SubResource("Curve_6m0sd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6m0sd"]
angle_min = 1.07288e-05
angle_max = 1.07288e-05
spread = 180.0
initial_velocity_min = 1.0
initial_velocity_max = 5.0
gravity = Vector3(0, 4, 0)
scale_min = 0.6
scale_max = 1.2
scale_curve = SubResource("CurveTexture_74toi")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kuq17"]
resource_name = "Material.002"
albedo_color = Color(0.831373, 0.686275, 0.215686, 1)
metallic = 0.992126
roughness = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_atakk"]
material = SubResource("StandardMaterial3D_kuq17")
radius = 0.05
height = 0.1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_avh27"]
angle_min = 1.07288e-05
angle_max = 1.07288e-05
spread = 180.0
initial_velocity_min = 1.0
initial_velocity_max = 5.0
gravity = Vector3(0, 4, 0)
scale_min = 0.6
scale_max = 1.2
scale_curve = SubResource("CurveTexture_74toi")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ntq7v"]
resource_name = "Material.004"
cull_mode = 2
albedo_color = Color(0.721569, 0.45098, 0.2, 1)
metallic = 1.0
roughness = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_1cpwy"]
material = SubResource("StandardMaterial3D_ntq7v")
radius = 0.035
height = 0.07

[node name="tracer_enemy" groups=["enemies", "tracer_enemies"] instance=ExtResource("1_xmt04")]
script = ExtResource("2_cml04")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="0"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 2.49526, 0.0587844)
shape = SubResource("CapsuleShape3D_plklt")

[node name="Sphere_022" parent="." index="1"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.0105708, 0.483929, 0.25348)
surface_material_override/0 = SubResource("StandardMaterial3D_oj6cs")

[node name="Sphere_023" parent="." index="2"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.0105708, 0.483929, 0.25348)
surface_material_override/0 = SubResource("StandardMaterial3D_cml04")

[node name="Cylinder_012" parent="." index="3"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0.0105708, 0.483929, 0.25348)
surface_material_override/0 = SubResource("StandardMaterial3D_plklt")

[node name="Armature" parent="." index="5"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.0100516, 0.583652, 0.0277477)

[node name="RayCast3D" type="RayCast3D" parent="Armature" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0208821, -0.576703, 0.981157)

[node name="Sphere_021" parent="Armature" index="1"]
unique_name_in_owner = true
surface_material_override/0 = SubResource("StandardMaterial3D_6m0sd")

[node name="Sphere_037" parent="Armature" index="2"]
unique_name_in_owner = true
surface_material_override/0 = SubResource("StandardMaterial3D_atakk")

[node name="Skeleton3D" parent="Armature" index="3"]
bones/8/rotation = Quaternion(-2.77635e-08, -5.12805e-09, -0.34202, 0.939693)
bones/11/rotation = Quaternion(5.20585e-08, 5.12805e-09, -0.34202, 0.939693)

[node name="Cylinder_009" parent="Armature/Skeleton3D" index="0"]
unique_name_in_owner = true
surface_material_override/0 = SubResource("StandardMaterial3D_avh27")

[node name="Sphere_018" parent="Armature/Skeleton3D" index="1"]
unique_name_in_owner = true
surface_material_override/0 = SubResource("StandardMaterial3D_1cpwy")

[node name="Sphere_036" parent="Armature/Skeleton3D" index="2"]
unique_name_in_owner = true
surface_material_override/0 = SubResource("StandardMaterial3D_sktum")

[node name="AnimationTree" type="AnimationTree" parent="." index="7"]
tree_root = SubResource("AnimationNodeStateMachine_plklt")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/has_appeared = false
parameters/walk/TimeScale/scale = 4.3

[node name="exclamation_mark" type="Node3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.2225)

[node name="exclamation_mark" type="MeshInstance3D" parent="exclamation_mark" index="0"]
transform = Transform3D(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
mesh = ExtResource("2_oj6cs")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="exclamation_mark/exclamation_mark" index="0"]
libraries = {
&"": SubResource("AnimationLibrary_oj6cs")
}

[node name="player_y_pos" type="Marker3D" parent="." index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.02888, 0)

[node name="body_particles" type="GPUParticles3D" parent="." index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.822463, 0)
visible = false
amount = 11
process_material = SubResource("ParticleProcessMaterial_6m0sd")
draw_pass_1 = SubResource("SphereMesh_atakk")

[node name="head_particles" type="GPUParticles3D" parent="." index="11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.23186, 0)
visible = false
amount = 6
process_material = SubResource("ParticleProcessMaterial_avh27")
draw_pass_1 = SubResource("SphereMesh_1cpwy")

[node name="Timer" type="Timer" parent="." index="12"]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
